--- a/salesorderts/ui5.yaml
+++ b/salesorderts/ui5.yaml
@@ -19,9 +19,9 @@ server:
           - path: /sap
             # url: https://pretyphoid-kiara-fernlike.ngrok-free.dev
             # destination: MiniSAPGrok
-            # url: http://sap:8000
-            # destination: sap
-            url: https://e038f76d084fe77fa656f7317a90c880.serveo.net
+            url: https://sap:8000
+            destination: sap
+            # url: https://e038f76d084fe77fa656f7317a90c880.serveo.net
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
