--- a/salesorderts/package.json
+++ b/salesorderts/package.json
@@ -10,18 +10,18 @@
   "main": "webapp/index.html",
   "dependencies": {},
   "devDependencies": {
-    "@ui5/cli": "^4.0.16",
-    "@sap/ux-ui5-tooling": "1",
-    "@sap-ux/eslint-plugin-fiori-tools": "^0.4.0",
-    "eslint": "8.57.0",
-    "eslint-plugin-fiori-custom": "2.6.7",
     "@babel/eslint-parser": "7.14.7",
+    "@sap-ux/eslint-plugin-fiori-tools": "^0.4.0",
+    "@sap-ux/ui5-middleware-fe-mockserver": "2",
+    "@sap/ux-ui5-tooling": "1",
     "@sapui5/types": "~1.141.0",
-    "ui5-tooling-transpile": "^3.3.7",
-    "typescript": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "@sap-ux/ui5-middleware-fe-mockserver": "2"
+    "@ui5/cli": "^4.0.16",
+    "eslint": "8.57.0",
+    "eslint-plugin-fiori-custom": "2.6.7",
+    "typescript": "^5.1.6",
+    "ui5-tooling-transpile": "^3.3.7"
   },
   "scripts": {
     "start": "fiori run --open \"test/flp.html#app-preview\"",
@@ -32,6 +32,7 @@
     "prestart": "npm run ts-typecheck",
     "prebuild": "npm run ts-typecheck",
     "deploy": "fiori verify",
+    "deploy-nwabap": "npx nwabap upload",
     "deploy-config": "fiori add deploy-config",
     "start-noflp": "fiori run --open \"/index.html?sap-ui-xx-viewCache=false\"",
     "start-mock": "fiori run --config ./ui5-mock.yaml --open \"test/flp.html#app-preview\"",
