--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.11.1'
-      - run: sh github-devops.sh
+      - run: sh ./salesorderts/github-devops.sh
