--- a/salesorderts/package.json
+++ b/salesorderts/package.json
@@ -21,7 +21,10 @@
     "eslint": "8.57.0",
     "eslint-plugin-fiori-custom": "2.6.7",
     "typescript": "^5.1.6",
-    "ui5-tooling-transpile": "^3.3.7"
+    "ui5-tooling-transpile": "^3.3.7",
+    "ui5-task-zipper": "^3.4.x",
+    "rimraf": "^5.0.5",
+    "mbt": "^1.2.29"
   },
   "scripts": {
     "start": "fiori run --open \"test/flp.html#app-preview\"",
@@ -31,7 +34,7 @@
     "ts-typecheck": "tsc --noEmit",
     "prestart": "npm run ts-typecheck",
     "prebuild": "npm run ts-typecheck",
-    "deploy": "fiori verify",
+    "deploy": "fiori cfDeploy",
     "deploy-nwabap": "npx nwabap upload",
     "deploy-config": "fiori add deploy-config",
     "start-noflp": "fiori run --open \"/index.html?sap-ui-xx-viewCache=false\"",
@@ -39,7 +42,10 @@
     "int-tests": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html?mockdata=true'",
     "int-tests2": "fiori run --config ./ui5.yaml --open 'test/integration/opaTests.qunit.html'",
     "start-variants-management": "fiori run --open \"/preview.html#app-preview\"",
-    "unit-test": "fiori run --config ./ui5-mock.yaml --open \"test/unit/unitTests.qunit.html\""
+    "unit-test": "fiori run --config ./ui5-mock.yaml --open \"test/unit/unitTests.qunit.html\"",
+    "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo",
+    "build:mta": "rimraf resources mta_archives && mbt build",
+    "undeploy": "cf undeploy appsdflcsalesorderts --delete-services --delete-service-keys --delete-service-brokers"
   },
   "sapuxLayer": "CUSTOMER_BASE"
 }
